--- a/src/css/layout.less
+++ b/src/css/layout.less
@@ -1,5 +1,216 @@
-.header{
+* {
   margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+.wrapper {
+  margin: 0 auto;
+}
+
+.header {
+  z-index: 5;
+  width: 100%;
+  height: 108px;
+  position: fixed;
+  background: white;
+  .header_container {
+    max-width: 1170px;
+
+    .header-top {
+      float: left;
+
+      margin-left: 98px;
+      margin-top: 38px;
+      margin-bottom: 38px;
+    }
+  }
+
+}
+
+#navTop {
+  float: right;
+}
+
+.navigation {
+  line-height: 100px;
+  text-align: justify;
+  margin-right: 80px;
+  width: 100%;
+
+  &:after {
+    width: 100%;
+    height: 0;
+    visibility: hidden;
+    overflow: hidden;
+    content: '';
+    display: inline-block;
+  }
+
+  .nav_item {
+    display: inline-block;
+    //margin-right:40px;
+
+    .link {
+      font-family: 'WorkSans-Regular', sans-serif;
+      font-size: 14px;
+      text-transform: uppercase;
+      color: #797979;
+      font-weight: bold;
+      &:hover {
+        text-decoration: none;
+        color: #5f5f5f;
+      }
+    }
+  }
+}
+
+.logo {
+
+}
+
+.logo-light {
+  display: none;
+}
+
+.start_section {
+  position: relative;
   height: 670px;
-  background: red;
+  background-image: url("/img/ps-images/home-7.jpg");
+  background-size: cover;
+  .textInfo {
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 270px;
+    .texttop {
+      font-family: 'WorkSans-Bold', sans-serif;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: #ffffff;
+      font-size: 18px;
+      letter-spacing: 3px;
+    }
+    .textmid {
+      color: #ffffff;
+      font-family: 'PlayfairDisplay-Bold', serif;
+      font-weight: bold;
+      font-size: 60px;
+    }
+    .textbot {
+      color: #ffffff;
+      font-family: 'PlayfairDisplay', serif;
+      font-size: 50px;
+    }
+    .scrollbutton {
+      position: absolute;
+      bottom: 64px;
+      margin-left: -25px;
+      display: inline-block;
+      margin-top: 100px;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+.aboutInfo {
+  width: 100%;
+  height: 422px;
+  background-color: #F6F6F6;
+  text-align: center;
+  color: #000000;
+
+  .contAbout {
+    max-width: 750px;
+    margin: auto;
+    padding-top: 94px;
+
+    .sectionHeader {
+      font-family: 'PlayfairDisplay-Bold', serif;
+      font-weight: bold;
+      font-size: 38px;
+      text-transform: capitalize;
+    }
+    .sectionContent {
+      font-family: 'WorkSans-Regular', sans-serif;
+      color: #5F5F5F;
+      font-size: 15px;
+      max-width: 750px;
+      margin-top: 40px;
+    }
+    .sinse {
+      margin: 39px;
+      //width: 222px;
+      //height: 58px;
+      //background-size:contain;
+
+    }
+  }
+}
+
+.container-fluid {
+  position: relative;
+  min-height: 258px;
+  background-image: url("/img/ps-images/pattern bg.jpg");
+  .rowCount {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    transform: translateY(-50%);
+    .count {
+      margin-left: 80px;
+      .countImg {
+        float: left;
+      }
+      .countContainer {
+        color: #ffffff;
+        margin-left: 68px;
+        margin-right:;
+        .countNumber {
+          font-family: 'WorkSans-Regular', sans-serif;
+          font-size: 18px;
+        }
+        .countName {
+          font-family: 'WorkSans-Medium', sans-serif;
+          text-transform: uppercase;
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+.gallery {
+
+  .gallerryContainer {
+    max-width: 1170px;
+    margin: 0 auto;
+    .galerryHeader {
+      text-align: center;
+      max-width: 690px;
+      margin: 0 auto;
+      h2 {
+        font-family:'PlayfairDisplay-Bold', serif;
+        font-size:38px;
+        margin-top:94px;
+        color: #171717;
+      }
+      .galleryInfo{
+        margin-top:40px;
+        font-family:'WorkSans-Regular', sans-serif;
+        font-size:15px;
+        color: #606060;
+        letter-spacing: 1px;
+      }
+    }
+  }
 }
