--- a/src/css/layout.less
+++ b/src/css/layout.less
@@ -15,7 +15,73 @@ a {
 }
 
 .wrapper {
-  margin: 0 auto;
+  overflow: hidden;
+
+  max-width: 100%;
+  height: 100%;
+  margin: 0 auto -200px;
+}
+
+
+.header-light {
+  z-index: 5;
+  width: 100%;
+  height: 108px;
+  position: fixed;
+  .header_container {
+    max-width: 1170px;
+
+    .header-top {
+      float: left;
+      margin-left: 98px;
+      margin-top: 38px;
+      margin-bottom: 38px;
+
+      .logo {
+        display: inline-block;
+        width: 82px;
+        height: 32px;
+        background-image: url('../img/ps-images/logo-light.png');
+      }
+    }
+    .navbar-collapse {
+      #navTop {
+        float: right;
+        .navigation {
+          line-height: 100px;
+          text-align: justify;
+          margin-right: 80px;
+          width: 100%;
+
+          &:after {
+            width: 100%;
+            height: 0;
+            visibility: hidden;
+            overflow: hidden;
+            content: '';
+            display: inline-block;
+          }
+
+          .nav_item {
+            display: inline-block;
+            //margin-right:40px;
+
+            .link {
+              font-family: 'WorkSans-Regular', sans-serif;
+              font-size: 14px;
+              text-transform: uppercase;
+              color: #b5b5b5;
+              font-weight: bold;
+              &:hover {
+                text-decoration: none;
+                color: #ffffff;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 .header {
@@ -23,72 +89,86 @@ a {
   width: 100%;
   height: 108px;
   position: fixed;
-  background: white;
+  background: #ffffff;
   .header_container {
     max-width: 1170px;
 
     .header-top {
       float: left;
-
       margin-left: 98px;
       margin-top: 38px;
       margin-bottom: 38px;
+      .logo {
+        display: inline-block;
+        width: 82px;
+        height:32px;
+        background-image: url('../img/ps-images/logo.png');
+      }
+      .logo-light {
+        display: none;
+      }
     }
-  }
+    .navbar-collapse {
+      #navTop {
+        float: right;
+        .navigation {
+          line-height: 100px;
+          text-align: justify;
+          margin-right: 80px;
+          width: 100%;
 
-}
+          &:after {
+            width: 100%;
+            height: 0;
+            visibility: hidden;
+            overflow: hidden;
+            content: '';
+            display: inline-block;
+          }
 
-#navTop {
-  float: right;
-}
+          .nav_item {
+            display: inline-block;
+            //margin-right:40px;
 
-.navigation {
-  line-height: 100px;
-  text-align: justify;
-  margin-right: 80px;
-  width: 100%;
-
-  &:after {
-    width: 100%;
-    height: 0;
-    visibility: hidden;
-    overflow: hidden;
-    content: '';
-    display: inline-block;
-  }
-
-  .nav_item {
-    display: inline-block;
-    //margin-right:40px;
-
-    .link {
-      font-family: 'WorkSans-Regular', sans-serif;
-      font-size: 14px;
-      text-transform: uppercase;
-      color: #797979;
-      font-weight: bold;
-      &:hover {
-        text-decoration: none;
-        color: #5f5f5f;
+            .link {
+              font-family: 'WorkSans-Regular', sans-serif;
+              font-size: 14px;
+              text-transform: uppercase;
+              color: #797979;
+              font-weight: bold;
+              &:hover {
+                text-decoration: none;
+                color: #5f5f5f;
+              }
+            }
+          }
+        }
       }
     }
   }
-}
-
-.logo {
 
 }
 
-.logo-light {
-  display: none;
-}
-
-.start_section {
+.startSection {
+  z-index: 1;
   position: relative;
   height: 670px;
-  background-image: url("/img/ps-images/home-7.jpg");
+  background-image: url("/img/photoImages/home-7.jpg");
   background-size: cover;
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(12, 12, 12, .6);
+  }
+
   .textInfo {
+    position: relative;
+    display: block;
+    z-index: 5;
     text-align: center;
     margin: 0 auto;
     padding-top: 270px;
@@ -111,9 +191,10 @@ a {
       font-family: 'PlayfairDisplay', serif;
       font-size: 50px;
     }
+
     .scrollbutton {
       position: absolute;
-      bottom: 64px;
+      bottom: -137px;
       margin-left: -25px;
       display: inline-block;
       margin-top: 100px;
@@ -153,32 +234,34 @@ a {
   }
 }
 
-.container-fluid {
+.countsInfo {
   position: relative;
   min-height: 258px;
   background-image: url("/img/ps-images/pattern bg.jpg");
-  .rowCount {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    transform: translateY(-50%);
-    .count {
-      margin-left: 80px;
-      .countImg {
-        float: left;
-      }
-      .countContainer {
-        color: #ffffff;
-        margin-left: 68px;
-        //margin-right:;
-        .countNumber {
-          font-family: 'WorkSans-Regular', sans-serif;
-          font-size: 18px;
+  .container-fluid {
+    .rowCount {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      transform: translateY(-50%);
+      .count {
+        margin-left: 80px;
+        .countImg {
+          float: left;
         }
-        .countName {
-          font-family: 'WorkSans-Medium', sans-serif;
-          text-transform: uppercase;
-          font-size: 14px;
+        .countContainer {
+          color: #ffffff;
+          margin-left: 68px;
+          //margin-right:;
+          .countNumber {
+            font-family: 'WorkSans-Regular', sans-serif;
+            font-size: 18px;
+          }
+          .countName {
+            font-family: 'WorkSans-Medium', sans-serif;
+            text-transform: uppercase;
+            font-size: 14px;
+          }
         }
       }
     }
@@ -211,7 +294,6 @@ a {
     .galleryBody {
       margin: 60px 0 100px 0;
       padding: 0;
-
       .item-masonry {
         position: relative;
         width: 390px;
@@ -227,28 +309,37 @@ a {
           padding: 0;
         }
         &:hover .cover-item-masonry {
-          display: block;
+          opacity: .9;
+          background-color: #000000;
+          visibility: visible;
+          transition-delay: 0s;
+          i {
+            top: 26%;
+            transition-delay: 0s;
+          }
         }
       }
 
       .cover-item-masonry {
-        display: none;
-        background-color: #000000;
-        opacity: .9;
+        //
+        visibility: hidden;
         position: absolute;
         width: 100%;
         top: 0;
         bottom: 0;
+        transition: background-color 1s, opacity 0s, visibility 0s, ease-in .2s;
         a {
           width: 100%;
           height: 100%;
           display: block;
           text-decoration: none;
           i {
+            min-width: 220px;
             color: #ffffff;
             position: absolute;
             top: 36%;
-            left: 31%;
+            left: 22%;
+            //transition: top 1s;
             h2 {
               text-align: center;
               font-family: 'PlayfairDisplay-Bold', sans-serif;
@@ -270,9 +361,13 @@ a {
 }
 
 .carouselQuote {
+  .dot {
+    background: #ffffff !important;
+  }
   min-height: 500px;
+  background-image: url("/img/ps-images/pattern bg.jpg");
   .page {
-    background-image: url("/img/ps-images/pattern bg.jpg");
+
     .main-carousel {
       .carousel-cell {
         width: 100%;
@@ -321,31 +416,368 @@ a {
 }
 
 .latestBlog {
+  padding-bottom: 124px;
   background: #fafafa;
   min-height: 855px;
+  text-align: center;
+  .container-fluid {
+    margin: 0;
+    padding: 0;
 
-  .headerBlogContainer {
-    text-align: center;
-    max-width: 690px;
-    margin: 0 auto;
-    min-height: 260px;
-    h2 {
-      font-family: 'PlayfairDisplay-Bold', serif;
-      font-size: 38px;
-      margin-top: 94px;
-      color: #171717;
+    .headerBlogContainer {
+      text-align: center;
+      max-width: 690px;
+      margin: 0 auto;
+      min-height: 260px;
+      h2 {
+        font-family: 'PlayfairDisplay-Bold', serif;
+        font-size: 38px;
+        margin-top: 94px;
+        color: #171717;
+      }
+      .latestBlogInfo {
+        margin-top: 40px;
+        font-family: 'WorkSans-Regular', sans-serif;
+        font-size: 15px;
+        color: #606060;
+        letter-spacing: 1px;
+      }
     }
-    .latestBlogInfo {
-      margin-top: 40px;
-      font-family: 'WorkSans-Regular', sans-serif;
-      font-size: 15px;
-      color: #606060;
-      letter-spacing: 1px;
+    .blogCarousell {
+
+      .blog-carousel {
+        padding-bottom: 50px;
+        margin: 0 auto;
+        max-width: 1170px;
+        justify-content: center;
+        text-align: center;
+        background: #fafafa;
+        .carousel-cell {
+          width: 370px;
+          margin: 10px;
+          .blogContent {
+            margin: 0 10px;
+            max-width: 370px;
+            min-height: 430px;
+            text-align: center;
+
+            .imageBlock {
+              opacity: 1;
+              transition: opacity 1s;
+              &:hover {
+                opacity: 0.7;
+                filter: alpha(opacity=70);
+              }
+              position: relative;
+              min-height: 240px;
+              background-image: url("/img/photoImages/post-6-mid.jpg");
+              background-size: cover;
+              .categoryBlog {
+                padding: 5px;
+                text-align: center;
+                position: absolute;
+                left: 10px;
+                bottom: 0;
+                height: 30px;
+                width: 90px;
+                background: #252525;
+                color: #ffffff;
+                font-family: 'WorkSans-Medium', sans-serif;
+                font-size: 12px;
+                text-transform: uppercase;
+              }
+            }
+            .imageBlock1 {
+              opacity: 1;
+              transition: opacity 1s;
+              &:hover {
+                opacity: 0.7;
+                filter: alpha(opacity=70);
+              }
+              position: relative;
+              min-height: 240px;
+              background-image: url("/img/photoImages/post-1-mid.jpg");
+              background-size: cover;
+              .categoryBlog {
+                padding: 5px;;
+                text-align: center;
+                position: absolute;
+                left: 10px;
+                bottom: 0;
+                height: 30px;
+                width: 90px;
+                background: #252525;
+                color: #ffffff;
+                font-family: 'WorkSans-Medium', sans-serif;
+                font-size: 12px;
+                text-transform: uppercase;
+              }
+            }
+            .imageBlock2 {
+              opacity: 1;
+              transition: opacity 1s;
+              &:hover {
+                opacity: 0.7;
+                filter: alpha(opacity=70);
+              }
+              position: relative;
+              min-height: 240px;
+              background-image: url("/img/photoImages/post-5-mid.jpg");
+              background-size: cover;
+              .categoryBlog {
+                padding: 5px;;
+                text-align: center;
+                position: absolute;
+                left: 10px;
+                bottom: 0;
+                height: 30px;
+                width: 90px;
+                background: #252525;
+                color: #ffffff;
+                font-family: 'WorkSans-Medium', sans-serif;
+                font-size: 12px;
+                text-transform: uppercase;
+              }
+            }
+            .imageBlock3 {
+              opacity: 1;
+              transition: opacity 1s;
+              &:hover {
+                opacity: 0.7;
+                filter: alpha(opacity=70);
+              }
+              position: relative;
+              min-height: 240px;
+              background-image: url("/img/photoImages/post-3-mid.jpg");
+              background-size: cover;
+              .categoryBlog {
+                padding: 5px;;
+                text-align: center;
+                position: absolute;
+                left: 10px;
+                bottom: 0;
+                height: 30px;
+                width: 90px;
+                background: #252525;
+                color: #ffffff;
+                font-family: 'WorkSans-Medium', sans-serif;
+                font-size: 12px;
+                text-transform: uppercase;
+              }
+            }
+            .imageBlock4 {
+              opacity: 1;
+              transition: opacity 1s;
+              &:hover {
+                opacity: 0.7;
+                filter: alpha(opacity=70);
+              }
+              position: relative;
+              min-height: 240px;
+              background-image: url("/img/photoImages/post-4-mid.jpg");
+              background-size: cover;
+              .categoryBlog {
+                padding: 5px;;
+                text-align: center;
+                position: absolute;
+                left: 10px;
+                bottom: 0;
+                height: 30px;
+                width: 90px;
+                background: #252525;
+                color: #ffffff;
+                font-family: 'WorkSans-Medium', sans-serif;
+                font-size: 12px;
+                text-transform: uppercase;
+              }
+            }
+            .blogInfo {
+              padding: 25px;
+              text-align: left;
+              background: #ffffff;
+              .blogLink {
+                color: #171717;
+                text-decoration: none;
+                &:hover {
+                  text-decoration: none;
+
+                }
+                h3 {
+                  font-family: 'PlayfairDisplay-Bold', serif;
+                  font-size: 38px;
+                  transition: color 1s;
+                  &:hover {
+                    color: #737373;
+                  }
+                }
+              }
+              .date {
+                font-family: 'WorkSans-Medium', sans-serif;
+                font-size: 12px;
+                text-transform: uppercase;
+              }
+              .blogInfoText {
+                font-family: 'WorkSans-Medium', sans-serif;
+                font-size: 15px;
+                color: #6D6D6D;
+              }
+            }
+          }
+        }
+
+      }
     }
   }
+}
 
-  .blogContent {
-    max-width: 370px;
-    min-height: 430px;
+.contactInfo {
+  min-height: 625px;
+  background-color: #F6F6F6;
+  .contactInfoContainer {
+    margin-left: 100px;
+    .googleMap {
+      margin-top: 30px;
+      padding-bottom: 30px;
+      iframe {
+        margin: 0;
+        padding: 0;
+      }
+    }
+    .contactSide {
+      h2 {
+        font-family: 'PlayfairDisplay-Bold', serif;
+        font-size: 38px;
+        margin-top: 94px;
+        color: #171717;
+      }
+      .info {
+        margin-top: 40px;
+        font-family: 'WorkSans-Regular', sans-serif;
+        font-size: 20px;
+        color: #606060;
+        letter-spacing: 1px;
+        line-height: 30px;
+      }
+      ul {
+        margin-top: 72px;
+        .liItem {
+          margin-top: 15px;
+          .itemName {
+            width: 100px;
+            font-family: 'WorkSans-Medium', sans-serif;
+            font-size: 20px;
+          }
+          .itemData {
+            font-family: 'WorkSans-Regular', sans-serif;
+            font-size: 20px;
+            letter-spacing: 1px;
+            color: #606060;
+            a {
+              text-decoration: none;
+              color: #606060;
+              &:hover {
+                opacity: .7;
+                color: #404040;
+              }
+            }
+          }
+        }
+      }
+    }
+    .massageSide {
+      max-width: 670px;
+      margin-top: 94px;
+      .form {
+        input {
+          width: 47.5%;
+          border: none;
+          color: #000000;
+          height: 48px;
+          &:focus {
+            outline: none;
+          }
+        }
+        .distance {
+          height: 40px;
+        }
+        .inputGroup {
+          height: 48px;
+          .inputName {
+            float: left;
+          }
+          .inputEmail {
+            float: right;
+          }
+          .clear {
+            content: '';
+            clear: both;
+          }
+        }
+        .inputTitle {
+          width: 100%;
+          input {
+            width: 100%;
+            padding: 0 15px;
+          }
+        }
+        .textArea {
+          textarea {
+            border: none;
+            color: #858585;
+            width: 100%;
+            padding: 15px;
+            min-height: 170px;
+            &:focus {
+              outline: none;
+            }
+          }
+        }
+        .sendButton {
+          border: none;
+          margin-top: 10px;
+          background: #000000;
+          height: 55px;
+          width: 180px;
+          color: #ffffff;
+          &:hover {
+            opacity: .8;
+          }
+        }
+      }
+    }
+  }
+}
+
+.footer {
+  margin-top: 200px;
+  display: block;
+  height: 200px;
+  background: #ebebeb;
+  .footerContainer {
+    margin: 0 auto;
+    max-width: 510px;
+    text-align: center;
+    .socialWebs {
+      padding-top: 62px;
+      a {
+        min-height: 50px;
+        margin: 0 15px;
+        background-size: auto;
+        img {
+
+        }
+        &:hover {
+          opacity: .5;
+        }
+      }
+    }
+    .copyright {
+      p {
+        margin-top: 30px;
+        font-family: 'WorkSans-Regular', serif;
+        font-size: 20px;
+        color: #5F5F5F;
+      }
+    }
   }
 }
