95%complete...need data-table and main menu fix...wish me luck)))

--- a/src/css/fonts.less
+++ b/src/css/fonts.less
@@ -18,4 +18,8 @@
   font-family: 'WorkSans-Medium';
   src: url('../fonts/WorkSans-Medium.otf');
 }
+@font-face {
+  font-family: 'PlayfairDisplay-Italic';
+  src: url('../fonts/WorkSans-Medium.otf');
+}
 
