Almoust ready little buggs fix need...

--- a/src/css/layout.less
+++ b/src/css/layout.less
@@ -835,6 +835,7 @@ a {
   }
   .navbar-collapse.in {
     overflow-y: visible !important;
+    position: fixed;
   }
   .link{
     color: #ffffff !important;
