--- a/src/css/blog.less
+++ b/src/css/blog.less
@@ -1,10 +1,11 @@
 @import "fonts";
 
 .headerStatic {
-  position: static;
+  position: fixed;
 }
 
 .blogImgSection {
+  margin-top: 70px;
   width: 100%;
   .imgPattern {
     width: 100%;
