--- a/src/css/snowwork.less
+++ b/src/css/snowwork.less
@@ -4,10 +4,11 @@
   padding: 0;
 }
 .headerStatic {
-  position: static;
+  position: fixed;
 }
 
 .projectInfo {
+  margin-top: 70px;
   background: #F6F6F6;
   min-height: 390px;
   text-align: left;
@@ -60,11 +61,11 @@
   margin:0 auto;
   min-height: 492px;
   height:100%;
-  width: 1170px;
+  max-width: 1170px;
   background: #F6F6F6;
   .pageImg{
     min-height: 100%;
-    width: 1170px;
+    max-width: 1170px;
     iframe{
       width: 100%;
       margin: 0 auto;
