--- a/src/css/snowwork.less
+++ b/src/css/snowwork.less
@@ -112,3 +112,12 @@
     }
   }
 }
+
+@media (max-width: 480px) {
+  .projectNavigation{
+    padding:40px 0 !important;
+  }
+  .projectContainer{
+    padding:40px 0 !important;
+  }
+}
