--- a/src/css/layout.less
+++ b/src/css/layout.less
@@ -40,6 +40,7 @@ a {
 
     .icon-bar {
       color: #ffffff;
+
     }
     .header-top {
       float: left;
@@ -152,7 +153,7 @@ a {
           display: inline-block;
 
           a {
-            margin: 0;
+            margin: 0 auto;
             padding: 0;
           }
 
@@ -876,6 +877,10 @@ a {
 }
 
 @media (max-width: 767px) {
+  .navigation {
+    //margin-right: 120px !important;
+  }
+
   .massageSide {
     margin: 0 auto;
   }
@@ -908,12 +913,18 @@ a {
     right: 60px;
 
   }
+  a{
+    margin: 0 auto;
+  }
 
   .link {
+    width: 160px;
+    margin: 0 auto;
+    max-width: 160px;
     color: #ffffff !important;
     transition: .3s !important;
     &:hover {
-      //font-size: 16px !important;
+
     }
 
   }
